--- a/Dockerfile.latest
+++ b/Dockerfile.latest
@@ -6,16 +6,11 @@ RUN apt-get update && apt-get install -y openssl sudo
 # Allow the postgres user to execute certain commands as root without a password
 RUN echo "postgres ALL=(root) NOPASSWD: /usr/bin/mkdir, /bin/chown" > /etc/sudoers.d/postgres
 
-# Add our modified entrypoint script that sets PGPORT to 5432
-COPY entrypoint.sh /docker-entrypoint.sh
-
-# Make the entrypoint script executable
-RUN chmod +x /docker-entrypoint.sh
+# Add our custom postgresql.conf
+COPY postgresql.conf /etc/postgresql/postgresql.conf
 
 # Add our init script
 COPY init-ssl.sh /docker-entrypoint-initdb.d/
 
 # Set permissions
 RUN chmod +x /docker-entrypoint-initdb.d/init-ssl.sh
-
-CMD ["postgres"]
