--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,5 @@
 name: Docker Image CI/CD
 
-
 on:
   workflow_dispatch:
 
@@ -8,8 +7,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
+      id-token: write
 
     strategy:
       matrix:
@@ -19,8 +19,21 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v3
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          platforms: linux/amd64,linux/arm64
+
       - name: Login to GitHub Container Registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract version from Dockerfile name
         id: extract_version
@@ -31,9 +44,10 @@ jobs:
         shell: bash
 
 
-      - name: Build and Push Docker image
-        run: |
-          version="${{ steps.extract_version.outputs.version }}"
-          docker build -f "${{ matrix.dockerfile }}" -t ghcr.io/${{ github.repository }}:${version} .
-          docker push ghcr.io/${{ github.repository }}:${version}
-        working-directory: .
+      - name: Build and Publish
+        uses: docker/build-push-action@v4
+        with:
+          file: ${{ matrix.dockerfile }}
+          platforms: linux/arm64, linux/amd64
+          push: true
+          tags: ghcr.io/${{ github.repository }}:${{ steps.extract_version.outputs.version }}
