separate concerns for build workflows

--- a/.github/workflows/buildLatest.yml
+++ b/.github/workflows/buildLatest.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI/CD for Version 13 & 14
+name: Docker Image CI/CD for latest
 
 on:
   workflow_dispatch:
@@ -10,10 +10,6 @@ jobs:
       contents: write
       packages: write
       id-token: write
-
-    strategy:
-      matrix:
-        dockerfile: ['Dockerfile.13', 'Dockerfile.14']
 
     steps:
       - name: Checkout sources
@@ -35,19 +31,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract version from Dockerfile name
-        id: extract_version
-        run: |
-          version="${{ matrix.dockerfile }}"
-          version="${version#Dockerfile.}" # Remove "Dockerfile." prefix if it exists
-          echo "::set-output name=version::${version}"
-        shell: bash
-
-
       - name: Build and Publish
         uses: docker/build-push-action@v4
         with:
-          file: ${{ matrix.dockerfile }}
+          file: Dockerfile.latest
           platforms: linux/arm64, linux/amd64
           push: true
-          tags: ghcr.io/${{ github.repository }}:${{ steps.extract_version.outputs.version }}
+          tags: ghcr.io/${{ github.repository }}:latest
