--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,4 +1,4 @@
-FROM postgres:13
+FROM postgres:{{version}}
 
 # Install OpenSSL and sudo
 RUN apt-get update && apt-get install -y openssl sudo
@@ -8,10 +8,15 @@ RUN echo "postgres ALL=(root) NOPASSWD: /usr/bin/mkdir, /bin/chown" > /etc/sudoe
 
 # Add init scripts
 COPY init-ssl.sh /docker-entrypoint-initdb.d/
+COPY configure-postgres.sh /docker-entrypoint-initdb.d/
 COPY wrapper.sh /usr/local/bin/wrapper.sh
+
+# Add cert conf, required to generate v3 certs
+COPY ssl-extensions.conf /etc/ssl/certs/
 
 # Set permissions
 RUN chmod +x /docker-entrypoint-initdb.d/init-ssl.sh
+RUN chmod +x /docker-entrypoint-initdb.d/configure-postgres.sh
 RUN chmod +x /usr/local/bin/wrapper.sh
 
 ENTRYPOINT ["wrapper.sh"]
