--- a/Dockerfile.latest
+++ b/Dockerfile.latest
@@ -7,11 +7,11 @@ RUN apt-get update && apt-get install -y openssl sudo
 RUN echo "postgres ALL=(root) NOPASSWD: /usr/bin/mkdir, /bin/chown" > /etc/sudoers.d/postgres
 
 # Add init scripts
-COPY init-ssl.sh /docker-entrypoint-initdb.d/
+COPY init-ssl.sh /usr/local/bin/init-ssl.sh
 COPY wrapper.sh /usr/local/bin/wrapper.sh
 
 # Set permissions
-RUN chmod +x /docker-entrypoint-initdb.d/init-ssl.sh
+RUN chmod +x /usr/local/bin/init-ssl.sh
 RUN chmod +x /usr/local/bin/wrapper.sh
 
 ENTRYPOINT ["wrapper.sh"]
