--- a/Dockerfile.15
+++ b/Dockerfile.15
@@ -4,15 +4,11 @@ FROM postgres:15
 RUN apt-get update && apt-get install -y openssl sudo
 
 # Allow the postgres user to execute certain commands as root without a password
-RUN echo "postgres ALL=(root) NOPASSWD: /usr/bin/mkdir, /bin/chown" > /etc/sudoers.d/postgres
+RUN echo "postgres ALL=(root) NOPASSWD: /usr/bin/mkdir, /bin/chown, /usr/bin/openssl" > /etc/sudoers.d/postgres
 
-# Add init scripts
-COPY init-ssl.sh /usr/local/bin/init-ssl.sh
-COPY wrapper.sh /usr/local/bin/wrapper.sh
-
-# Set permissions
-RUN chmod +x /usr/local/bin/init-ssl.sh
-RUN chmod +x /usr/local/bin/wrapper.sh
+# Add init scripts while setting permissions
+COPY --chmod=755 init-ssl.sh /docker-entrypoint-initdb.d/init-ssl.sh
+COPY --chmod=755 wrapper.sh /usr/local/bin/wrapper.sh
 
 ENTRYPOINT ["wrapper.sh"]
 CMD ["postgres", "--port=5432"]
