--- a/.github/workflows/buildNumberVersions.yml
+++ b/.github/workflows/buildNumberVersions.yml
@@ -13,7 +13,14 @@ jobs:
 
     strategy:
       matrix:
-        dockerfile: ['Dockerfile.13', 'Dockerfile.14', 'Dockerfile.15', 'Dockerfile.16']
+        dockerfile:
+          [
+            "Dockerfile.13",
+            "Dockerfile.14",
+            "Dockerfile.15",
+            "Dockerfile.16",
+            "Dockerfile.17",
+          ]
 
     steps:
       - name: Checkout sources
@@ -21,7 +28,7 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-        
+
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v3
