--- a/Dockerfile.14
+++ b/Dockerfile.14
@@ -1,7 +1,12 @@
 FROM postgres:14
 
 # Install OpenSSL and sudo
-RUN apt-get update && apt-get install -y openssl sudo
+RUN apt-get update && apt-get install -y openssl sudo --no-install-recommends \
+    postgresql-contrib \
+    postgresql-14-pgvector \
+    postgresql-14-pg-cron \
+    postgresql-14-postgis \
+    && rm -rf /var/lib/apt/lists/*
 
 # Allow the postgres user to execute certain commands as root without a password
 RUN echo "postgres ALL=(root) NOPASSWD: /usr/bin/mkdir, /bin/chown, /usr/bin/openssl" > /etc/sudoers.d/postgres
