--- a/Dockerfile.17
+++ b/Dockerfile.17
@@ -1,7 +1,12 @@
 FROM postgres:17
 
 # Install OpenSSL and sudo
-RUN apt-get update && apt-get install -y openssl sudo
+RUN apt-get update && apt-get install -y openssl sudo --no-install-recommends \
+    postgresql-contrib \
+    postgresql-17-pgvector \
+    postgresql-17-pg-cron \
+    postgresql-17-postgis \
+    && rm -rf /var/lib/apt/lists/*
 
 # Allow the postgres user to execute certain commands as root without a password
 RUN echo "postgres ALL=(root) NOPASSWD: /usr/bin/mkdir, /bin/chown, /usr/bin/openssl" > /etc/sudoers.d/postgres
