--- a/Dockerfile.15
+++ b/Dockerfile.15
@@ -1,12 +1,15 @@
 FROM postgres:15
 
 # Install OpenSSL and sudo
-RUN apt-get update && apt-get install -y openssl sudo --no-install-recommends \
+RUN apt-get update && apt-get install -y \
+    openssl \
+    sudo \
+    --no-install-recommends \
     postgresql-contrib \
     postgresql-15-pgvector \
-    postgresql-15-pg-cron \
     postgresql-15-postgis \
     && rm -rf /var/lib/apt/lists/*
+
 
 # Allow the postgres user to execute certain commands as root without a password
 RUN echo "postgres ALL=(root) NOPASSWD: /usr/bin/mkdir, /bin/chown, /usr/bin/openssl" > /etc/sudoers.d/postgres
