--- a/Dockerfile.14
+++ b/Dockerfile.14
@@ -6,6 +6,9 @@ RUN apt-get update && apt-get install -y \
     sudo \
     --no-install-recommends \
     postgresql-contrib \
+    pgbouncer postgresql-common \
+    lz4 libpq-dev libpq5 pg-activity \
+    lsof htop \
     postgresql-14-pgvector \
     postgresql-14-postgis \
     && rm -rf /var/lib/apt/lists/*
