--- a/Dockerfile.16
+++ b/Dockerfile.16
@@ -6,6 +6,9 @@ RUN apt-get update && apt-get install -y \
     sudo \
     --no-install-recommends \
     postgresql-contrib \
+    pgbouncer postgresql-common \
+    lz4 libpq-dev libpq5 pg-activity \
+    lsof htop \
     postgresql-16-pgvector \
     postgresql-16-postgis \
     && rm -rf /var/lib/apt/lists/*
