Implement automated PostgreSQL version tagging system
- Add get-postgres-version.sh script to automatically detect latest minor/patch versions from Docker Hub
- Update all Dockerfiles (13-17) to accept POSTGRES_VERSION build argument
- Replace separate workflows with unified build-and-push.yml that builds all versions with multiple tags:
  - Major version (e.g., :17)
  - Minor version (e.g., :17.6)
  - Patch version (e.g., :17.6.0)
- Add LATEST_POSTGRES_MAJOR environment variable for easy control of which version gets :latest tag
- Remove Dockerfile.latest and separate build-latest job
- Update README with comprehensive tagging documentation and usage examples

This enables automatic tracking of PostgreSQL updates while providing flexible version pinning options.

--- a/Dockerfile.13
+++ b/Dockerfile.13
@@ -1,4 +1,5 @@
-FROM postgres:13
+ARG POSTGRES_VERSION=13
+FROM postgres:${POSTGRES_VERSION}
 
 # Install OpenSSL and sudo
 RUN apt-get update && apt-get install -y openssl sudo
