--- a/Dockerfile.17
+++ b/Dockerfile.17
@@ -1,4 +1,5 @@
-FROM postgres:17
+ARG POSTGRES_VERSION=17
+FROM postgres:${POSTGRES_VERSION}
 
 # Install OpenSSL and sudo
 RUN apt-get update && apt-get install -y openssl sudo
